--- a/app/globals.css
+++ b/app/globals.css
@@ -295,3 +295,28 @@ body {
 .swiper-slide:nth-child(3n) {
   width: 20%;
 } */
+
+.image{
+    /* background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLZZjw0UFZsQrczVCN04JYiJhwV9_pEBTaoaydLOKgpf5w6m4IGesNLVmEDGM6Xt4vDJw&usqp=CAU"); */
+    background-image: url("../public/asset/hero.png");
+    background-size: cover;
+    width: 400px;
+    height:400px;
+    border: 1px solid white;
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    animation: morph 8s ease-in-out infinite;
+    
+}
+
+@keyframes morph {
+    0% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+    50% {
+        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+    }
+    100% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+    
+}
