--- a/app/globals.css
+++ b/app/globals.css
@@ -4,9 +4,10 @@
 @tailwind utilities;
 
 .home {
-  background-image: url("../public/FooterSection.svg");
+  /* background-image: url("../public/FooterSection.svg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
+  background-color: #FBFBFB;
 }
 
 
@@ -302,7 +303,7 @@ body {
     background-size: cover;
     width: 400px;
     height:400px;
-    border: 1px solid white;
+    border: 2px solid #0B1D51;
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     animation: morph 8s ease-in-out infinite;
     
